@@ -9,7 +9,7 @@ license             = Perl_5
 -relationship = requires
 Dist::Zilla = 4.300038
 Dist::Zilla::Plugin::Git::NextVersion = 0
-Dist::Zilla::Plugin::EnsurePrereqsInstalled = 0
+;Dist::Zilla::Plugin::EnsurePrereqsInstalled = 0
 Dist::Zilla::Plugin::PromptIfStale = 0.004
 Dist::Zilla::Plugin::ExecDir = 0
 Dist::Zilla::Plugin::ShareDir = 0
